--- a/app/views/pages/current-movies.html
+++ b/app/views/pages/current-movies.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" type="text/css" href="styles/current-movies.css">
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-12">
@@ -132,6 +133,16 @@
                                     <!--<input type="text" class="form-control" id="cleanTime"-->
                                            <!--placeholder="In minutes" required="">-->
                                 </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <!-- <div class="control-label col-sm-3">Buy Ticket Online</div> -->
+                            <label class="control-label col-sm-3" for="buyTicketButton">Buy Ticket Online</label>
+                            <div class="col-sm-9">
+                                <label class="switch">
+                                  <input type="checkbox" ng-change="buyTicketButton(buyTicketButtonValue)" ng-model="buyTicketButtonValue" id="buyTicketButton">
+                                  <div class="slider round"></div>
+                                </label>
                             </div>
                         </div>
                         <div class="form-group">
