Added and changed as per new ap

--- a/app/views/pages/current-movies.html
+++ b/app/views/pages/current-movies.html
@@ -135,7 +135,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group" ng-if="false">
                             <!-- <div class="control-label col-sm-3">Buy Ticket Online</div> -->
                             <label class="control-label col-sm-3" for="buyTicketButton">Buy Ticket Online</label>
                             <div class="col-sm-9">
