--- a/app/views/pages/upcoming-movies.html
+++ b/app/views/pages/upcoming-movies.html
@@ -16,7 +16,8 @@
                 <div class="panel-body">
                     <form class="form-horizontal" role="form">
                         <div class="form-group">
-                            <label class="control-label col-sm-3" for="movieName">Movie Name</label>
+                            <label class="control-label col-sm-3" for="movieName">Movie
+                                Name</label>
                             <div class="col-sm-9">
                                 <div class="input-group">
                                     <span class="input-group-addon">
@@ -26,30 +27,37 @@
                                            placeholder="Movie Name (Type to search)"
                                            ng-model="typedMovie"
                                            ng-change="showMovieSuggestions(typedMovie)"
-                                           required="" >
+                                           required="">
                                     <datalist id="movieName">
-                                        <option ng-repeat="movie in searchedMovie track by $index ">{{movie.upMovieName}}</option>
+                                        <option ng-repeat="movie in searchedMovie track by $index ">
+                                            {{movie.upMovieName}}
+                                        </option>
                                     </datalist>
 
                                 </div>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="control-label col-sm-3" for="movieLength">Release Date </label>
+                            <label class="control-label col-sm-3" for="movieLength">Release
+                                Date </label>
                             <div class="col-sm-9">
                                 <div class="input-group">
                                     <span class="input-group-addon">
                                         <i class="fa fa-calendar"></i>
                                     </span>
-                                    <input type="text" class="form-control" id="movieLength"
-                                           placeholder="Displayed automatically" ng-model="upReleaseDateMovie[0].upReleaseDate"
+                                    <input type="text" class="form-control"
+                                           id="movieLength"
+                                           placeholder="Displayed automatically"
+                                           ng-model="upReleaseDateMovie[0].upReleaseDate"
                                            required="" disabled>
                                 </div>
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="col-sm-offset-3 col-sm-9">
-                                <button type="submit" ng-click="updateMovie()" class="btn btn-primary">Submit</button>
+                                <button type="submit" ng-click="updateMovie()"
+                                        class="btn btn-primary">Submit
+                                </button>
                             </div>
                         </div>
                     </form>
@@ -67,7 +75,7 @@
                 <!-- /.panel-heading -->
                 <div class="panel-body panel-height">
                     <div class="table-responsive">
-                        <table class="table table-hover table-fixed qrScroll " >
+                        <table class="table table-hover table-fixed qrScroll ">
                             <thead>
                             <tr>
                                 <th class="col-md-8">Movie Name</th>
@@ -80,11 +88,14 @@
                                 <td class="col-md-8">{{upMovie.upMovieName}}</td>
                                 <td class="col-md-2">{{upMovie.upReleaseDate}}</td>
                                 <td class="col-md-2">
-                                    <button type="button" class="btn btn-success btn-sm" ng-click="updatedMovie(upMovie.upMovieId)">
-                                        <i class="fa fa-plus-circle fa-2" aria-hidden="true"></i>
+                                    <button type="button" class="btn btn-success btn-sm"
+                                            ng-click="updatedMovie(upMovie.upMovieId)">
+                                        <i class="fa fa-plus-circle fa-2"
+                                           aria-hidden="true"></i>
                                     </button>
                                     <button type="button" class="btn btn-danger btn-sm">
-                                        <i class="fa fa-minus-circle fa-2" aria-hidden="true"></i>
+                                        <i class="fa fa-minus-circle fa-2"
+                                           aria-hidden="true"></i>
                                     </button>
                                 </td>
                             </tr>
@@ -110,13 +121,13 @@
                 <div class="panel-body">
                     <div class="table-responsive">
                         <div class="dataTable_wrapper dos-table-fixed dos-Scroll">
-                            <table class="table table-hover table-fixed table-hover dos-Scroll" >
+                            <table class="table table-hover table-fixed table-hover dos-Scroll">
                                 <thead>
                                 <tr>
-                                    <th class="col-md-3"> Movie Name </th>
-                                    <th class="col-md-3">  Release Date   </th>
+                                    <th class="col-md-3"> Movie Name</th>
+                                    <th class="col-md-3"> Release Date</th>
                                     <th class="col-md-3"> Movie Image</th>
-                                    <th class="col-md-3">  Actions </th>
+                                    <th class="col-md-3"> Actions</th>
                                 </tr>
                                 </thead>
                                 <tbody>
@@ -125,26 +136,33 @@
                                     <td class="col-md-3">{{upMovie.upReleaseDate}}</td>
                                     <td class="col-md-3 img-hover">
                                         <img
-                                             alt="{{upMovie.upMovieName}}"
-                                             ng-src="{{imagePath}}{{upMovie.upPosterPath}}"
-                                             ng-click="clickedMovie($index)"
-                                             class="img-responsive img-rounded" style="width:30px;height:30px;">
+                                                alt="{{upMovie.upMovieName}}"
+                                                ng-src="{{imagePath}}{{upMovie.upPosterPath}}"
+                                                ng-click="clickedMovie($index)"
+                                                class="img-responsive img-rounded"
+                                                style="width:30px;height:30px;">
                                         <!-- Modal -->
-                                        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                                        <div class="modal fade" id="myModal" tabindex="-1"
+                                             role="dialog" aria-labelledby="myModalLabel"
+                                             aria-hidden="true">
 
                                             <div class="modal-dialog">
                                                 <center>
                                                     <img alt="{{showClickedMovie.upMovieName}}"
                                                          ng-src="{{imagePath}}{{showClickedMovie.upPosterPath}}"
-                                                         class="img-responsive img-rounded" style="width: 250px;height: 380px;">
+                                                         class="img-responsive img-rounded"
+                                                         style="width: 250px;height: 380px;">
                                                 </center>
                                             </div>
                                             <div class="center-block">
                                                 <center>
-                                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                                    <button type="button"
+                                                            class="btn btn-default"
+                                                            data-dismiss="modal">Close
+                                                    </button>
                                                     <!--<button class="fileUpload btn btn-primary">-->
-                                                        <!--<span>Upload</span>-->
-                                                        <!--<input type="file" class="upload" ng-model="fileName" ng-change="angular.element(this).scope().uploadFile(this.file)" />-->
+                                                    <!--<span>Upload</span>-->
+                                                    <!--<input type="file" class="upload" ng-model="fileName" ng-change="angular.element(this).scope().uploadFile(this.file)" />-->
                                                     <!--</button>-->
                                                 </center>
                                             </div>
@@ -153,7 +171,12 @@
 
                                     </td>
                                     <td class="col-md-3">
-                                        <button type="button"  ng-click="clickedMovie($index)" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#myModal">View Image</button>
+                                        <button type="button"
+                                                ng-click="clickedMovie($index)"
+                                                class="btn btn-primary btn-sm"
+                                                data-toggle="modal"
+                                                data-target="#myModal">View Image
+                                        </button>
                                         <!--<button type="button" class="btn btn-danger btn-sm">Remove</button>-->
                                     </td>
                                 </tr>
@@ -173,30 +196,30 @@
 </div>
 
 <!--<style type="text/css">-->
-    <!--.img-hover img {-->
-        <!-- -webkit-transition: all .3s ease; /* Safari and Chrome */-->
-        <!-- -moz-transition: all .3s ease; /* Firefox */-->
-        <!-- -o-transition: all .3s ease; /* IE 9 */-->
-        <!-- -ms-transition: all .3s ease; /* Opera */-->
-        <!--transition: all .3s ease;-->
-    <!--}-->
-    <!--.img-hover img:hover {-->
-        <!-- -webkit-backface-visibility: hidden;-->
-        <!--backface-visibility: hidden;-->
-        <!-- -webkit-transform:translateZ(0) scale(10.20); /* Safari and Chrome */-->
-        <!-- -moz-transform:scale(1.20); /* Firefox */-->
-        <!-- -ms-transform:scale(1.20); /* IE 9 */-->
-        <!-- -o-transform:translatZ(0) scale(1.20); /* Opera */-->
-        <!--transform:translatZ(0) scale(1.20);-->
-        <!--z-index: 999;-->
-    <!--}-->
+<!--.img-hover img {-->
+<!-- -webkit-transition: all .3s ease; /* Safari and Chrome */-->
+<!-- -moz-transition: all .3s ease; /* Firefox */-->
+<!-- -o-transition: all .3s ease; /* IE 9 */-->
+<!-- -ms-transition: all .3s ease; /* Opera */-->
+<!--transition: all .3s ease;-->
+<!--}-->
+<!--.img-hover img:hover {-->
+<!-- -webkit-backface-visibility: hidden;-->
+<!--backface-visibility: hidden;-->
+<!-- -webkit-transform:translateZ(0) scale(10.20); /* Safari and Chrome */-->
+<!-- -moz-transform:scale(1.20); /* Firefox */-->
+<!-- -ms-transform:scale(1.20); /* IE 9 */-->
+<!-- -o-transform:translatZ(0) scale(1.20); /* Opera */-->
+<!--transform:translatZ(0) scale(1.20);-->
+<!--z-index: 999;-->
+<!--}-->
 
 
-    <!--.grayscale {-->
-        <!-- -webkit-filter: brightness(1.10) grayscale(100%) contrast(90%);-->
-        <!-- -moz-filter: brightness(1.10) grayscale(100%) contrast(90%);-->
-        <!--filter: brightness(1.10) grayscale(100%);-->
-    <!--}-->
+<!--.grayscale {-->
+<!-- -webkit-filter: brightness(1.10) grayscale(100%) contrast(90%);-->
+<!-- -moz-filter: brightness(1.10) grayscale(100%) contrast(90%);-->
+<!--filter: brightness(1.10) grayscale(100%);-->
+<!--}-->
 <!--</style>-->
 <style type="text/css">
     .fileUpload {
@@ -204,6 +227,7 @@
         overflow: hidden;
         margin: 10px;
     }
+
     .fileUpload input.upload {
         position: absolute;
         top: 0;
